Fix spacing etc.

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ p, h1, h2, h3, h4, h5, h6 {
     border-radius: 2rem;
     padding: 0.5rem;
     margin: 1rem auto;
-    width: 50%;
+    width: 45%;
 }
 
 .instructions-container ol {
@@ -69,6 +69,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .etch-container {
     width: 50%;
+    min-width: 500px;
     margin: 1rem auto;
     background-color: var(--clr-primary);
     border: solid 2px var(--clr-primary);
@@ -156,13 +157,13 @@ footer, .footer-container {
 }
 
 @media (360px <= width <= 1200px) {
-    .etch-container {
+    .etch-container, .instructions-container {
         width: 80%;
     }
 }
 
-@media (360px <= width <= 850px) {
+@media (width <= 900px) {
     .instructions-container {
-        width: 80%;
+        width: 95%;
     }
 }
